# git-stub

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  release.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/git-stub/: CHANGELOG.md  Cargo.toml  README.md
crates/git-stub-materialize/: Cargo.toml  README.md
crates/git-stub-types/: Cargo.toml  README.md
crates/git-stub-types/src/: lib.rs
crates/git-stub-vcs/: CHANGELOG.md  Cargo.toml  README.md
crates/git-stub-vcs/src/: errors.rs  lib.rs  materialize.rs  vcs.rs
crates/git-stub-vcs/tests/integration/: main.rs  materialize.rs
crates/git-stub/src/: errors.rs  git_stub.rs  hash.rs  lib.rs
