[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidecomputer/git-stub"
rust-version = "1.85"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"] }

[workspace.dependencies]
anyhow = "1.0.99"
atomicwrites = "0.4.4"
camino = "1.2.1"
camino-tempfile = "1.4.1"
fs-err = "3.1.1"
git-stub-vcs = { path = "crates/git-stub-vcs", version = "0.1.0" }
git-stub = { path = "crates/git-stub", version = "1.0.0" }
hex = "0.4.3"
thiserror = "2.0"
