[package]
name = "git-stub"
version = "1.0.0"
description = "Parsing types for git stubs (commit:path references)"
readme = "README.md"
documentation = "https://docs.rs/git-stub"
repository.workspace = true
keywords = []
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
crates-io = true
docs-rs = true
rust-version = true

[dependencies]
camino.workspace = true
hex.workspace = true
thiserror.workspace = true

[package.metadata.release]
tag-name = "git-stub-{{version}}"
pre-release-replacements = [
    { file="CHANGELOG.md", search="Unreleased", replace="[{{version}}]", min=1 },
    { file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1 },
    { file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## Unreleased - ReleaseDate\n", exactly=1 },
    { file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[{{version}}]: https://github.com/oxidecomputer/git-stub/releases/tag/git-stub-{{version}}", exactly=1},
]
